[project]
name = "gsp"
version = "0.1.0"
description = "Repository for the GSP project"
readme = "README.md"
authors = [
    {name = "Recursion Pharmaceuticals", email = "devs@recursionpharma.com"},
]
requires-python = ">=3.12"
dependencies = [
  "torch==2.6.0",
  "torchaudio==2.6.0",
  "torchvision==0.21.0",
  "aiobotocore==2.21.1",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.11.18",
  "aioitertools==0.12.0",
  "aiosignal==1.3.2",
  "annotated-types==0.7.0",
  "antlr4-python3-runtime==4.9.3",
  "anyio==4.9.0",
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "array-api-compat==1.11.2",
  "arrow==1.3.0",
  "asciitree==0.3.3",
  "ase==3.25.0",
  "asttokens==3.0.0",
  "async-lru==2.0.5",
  "attrs==25.3.0",
  "babel==2.17.0",
  "beautifulsoup4==4.13.4",
  "bibtexparser==1.4.3",
  "bleach==6.2.0",
  "blessed==1.20.0",
  "botocore==1.37.1",
  "cachetools==5.5.2",
  "certifi==2025.1.31",
  "cffi==1.17.1",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "cloudpickle==3.1.1",
  "comm==0.2.2",
  "configargparse==1.7",
  "contourpy==1.3.2",
  "crc32c==2.7.1",
  "cycler==0.12.1",
  "datamol==0.12.5",
  "datasets==3.5.0",
  "debugpy==1.8.14",
  "decorator==5.2.1",
  "defusedxml==0.7.1",
  "deprecated==1.2.18",
  "diffusers==0.33.1",
  "dill==0.3.8",
  "docker-pycreds==0.4.0",
  "donfig==0.8.1.post1",
  "e3nn==0.4.4",
  "einops==0.8.1",
  "evaluate==0.4.3",
  "executing==2.2.0",
  "fasteners==0.19",
  "fastjsonschema==2.21.1",
  "filelock==3.13.1",
  "fonttools==4.57.0",
  "fqdn==1.5.1",
  "frozenlist==1.6.0",
  "fsspec==2024.12.0",
  "gcsfs",
  "geomloss==0.2.6",
  "gitdb==4.0.12",
  "gitpython==3.1.44",
  "gpustat==1.1.1",
  "h11==0.14.0",
  "h5py==3.13.0",
  "hjson==3.1.0",
  "httpcore==1.0.8",
  "httpx==0.28.1",
  "hydra-core==1.3.2",
  "hydra-submitit-launcher==1.2.0",
  "idna==3.10",
  "importlib-metadata==8.6.1",
  "importlib-resources==6.5.2",
  "ipykernel==6.29.5",
  "ipython==9.1.0",
  "ipython-pygments-lexers==1.1.1",
  "ipywidgets==8.1.6",
  "isoduration==20.11.0",
  "jedi==0.19.2",
  "jinja2==3.1.4",
  "jmespath==1.0.1",
  "joblib==1.4.2",
  "json5==0.12.0",
  "jsonpointer==3.0.0",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2025.4.1",
  "jupyter==1.1.1",
  "jupyter-client==8.6.3",
  "jupyter-console==6.6.3",
  "jupyter-core==5.7.2",
  "jupyter-events==0.12.0",
  "jupyter-lsp==2.2.5",
  "jupyter-server==2.15.0",
  "jupyter-server-terminals==0.5.3",
  "jupyterlab==4.4.1",
  "jupyterlab-pygments==0.3.0",
  "jupyterlab-server==2.27.3",
  "jupyterlab-widgets==3.0.14",
  "kiwisolver==1.4.8",
  "legacy-api-wrap==1.4.1",
  "lightning==2.5.1",
  "lightning-utilities==0.14.3",
  "llvmlite==0.44.0",
  "lmdb==1.6.2",
  "loguru==0.7.3",
  "lxml==5.4.0",
  "mace-torch==0.3.12",
  "mahotas==1.4.18",
  "markdown-it-py==3.0.0",
  "markupsafe==2.1.5",
  "matplotlib==3.10.1",
  "matplotlib-inline==0.1.7",
  "matscipy==1.1.1",
  "mdurl==0.1.2",
  "mistune==3.1.3",
  "molfeat==0.10.1",
  "monty==2025.3.3",
  "mordredcommunity==2.0.6",
  "mpmath==1.3.0",
  "msgpack==1.1.0",
  "multidict==6.4.3",
  "multiprocess==0.70.16",
  "munch==4.0.0",
  "narwhals==1.36.0",
  "natsort==8.4.0",
  "nbclient==0.10.2",
  "nbconvert==7.16.6",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "networkx==3.3",
  "nglview==3.1.4",
  "ninja==1.11.1.4",
  "notebook==7.4.1",
  "notebook-shim==0.2.4",
  "numba==0.61.2",
  "numcodecs==0.15.1",
  "numpy==1.26.4",
  "oauthlib==3.2.2",
  "omegaconf==2.3.0",
  "opt-einsum==3.4.0",
  "opt-einsum-fx==0.1.4",
  "orjson==3.10.16",
  "overrides==7.7.0",
  "packaging==24.2",
  "palettable==3.3.3",
  "pandas==2.2.3",
  "pandocfilters==1.5.1",
  "parso==0.8.4",
  "patsy==1.0.1",
  "pexpect==4.9.0",
  "phonopy==2.38.1",
  "pillow==11.0.0",
  "platformdirs==4.3.7",
  "plotly==6.0.1",
  "pmapper==1.1.2",
  "polars==1.27.1",
  "prettytable==3.16.0",
  "prometheus-client==0.21.1",
  "prompt-toolkit==3.0.51",
  "propcache==0.3.1",
  "proto-plus==1.26.1",
  "protobuf==6.30.2",
  "psutil==7.0.0",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "py-cpuinfo==9.0.0",
  "py3dmol==2.4.2",
  "pyarrow==19.0.1",
  "pyasn1==0.6.1",
  "pyasn1-modules==0.4.2",
  "pycparser==2.22",
  "pydantic==2.11.3",
  "pydantic-core==2.33.1",
  "pygments==2.19.1",
  "pymatgen==2025.4.24",
  "pynndescent==0.5.13",
  "pyocse==0.1.2",
  "pyparsing==3.2.3",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.0",
  "python-hostlist==2.2.1",
  "python-json-logger==3.3.0",
  "pytorch-lightning==2.5.1",
  "pytorch-ranger==0.1.1",
  "pytz==2025.2",
  "pyxtal==1.0.7",
  "pyyaml==6.0.2",
  "pyzmq==26.4.0",
  "rdkit==2024.9.6",
  "referencing==0.36.2",
  "regex==2024.11.6",
  "requests==2.32.3",
  "requests-oauthlib==2.0.0",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rich==14.0.0",
  "rpds-py==0.24.0",
  "rsa==4.9.1",
  "ruamel-yaml==0.18.10",
  "ruamel-yaml-clib==0.2.12",
  "s3fs",
  "safe-mol==0.1.13",
  "safetensors==0.5.3",
  "scanpy==1.11.1",
  "scikit-learn==1.5.2",
  "scipy==1.15.2",
  "seaborn==0.13.2",
  "selfies==2.2.0",
  "send2trash==1.8.3",
  "sentry-sdk==2.27.0",
  "session-info2==0.1.2",
  "setproctitle==1.3.5",
  "setuptools==70.2.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "smmap==5.0.2",
  "sniffio==1.3.1",
  "soupsieve==2.7",
  "spglib==2.6.0",
  "stack-data==0.6.3",
  "statsmodels==0.14.4",
  "submitit==1.5.2",
  "symfc==1.3.4",
  "sympy==1.13.1",
  "tabulate==0.9.0",
  "terminado==0.18.1",
  "threadpoolctl==3.6.0",
  "timm==1.0.15",
  "tinycss2==1.4.0",
  "tokenizers==0.21.1",
  "toml==0.10.2",
  "torch-ema==0.3",
  "tornado==6.4.2",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "transformers==4.51.3",
  "trl==0.17.0",
  "typer==0.15.2",
  "types-python-dateutil==2.9.0.20241206",
  "typing-extensions==4.12.2",
  "typing-inspection==0.4.0",
  "tzdata==2025.2",
  "umap-learn==0.5.7",
  "uncertainties==3.2.3",
  "universal-pathlib==0.2.6",
  "uri-template==1.3.0",
  "urllib3==2.4.0",
  "vasprun-xml==1.0.4",
  "wandb==0.19.10",
  "wcwidth==0.2.13",
  "webcolors==24.11.1",
  "webencodings==0.5.1",
  "websocket-client==1.8.0",
  "wheel==0.45.1",
  "widgetsnbextension==4.0.14",
  "wrapt==1.17.2",
  "xmltodict==0.14.2",
  "xxhash==3.5.0",
  "yarl==1.20.0",
  "zarr==2.9.5",
  "zipp==3.21.0",
  "flask>=3.1.0",
  "mypy>=1.15.0",
  "torchmetrics==1.7.1",
  "torch-optimizer==0.3.0",
  "accelerate==1.6.0",
  "google-api-core==2.24.2",
  "google-auth==2.39.0",
  "google-auth-oauthlib==1.2.2",
  "google-cloud-core==2.4.3",
  "google-cloud-storage==3.1.0",
  "google-crc32c==1.7.1",
  "google-resumable-media==2.7.2",
  "googleapis-common-protos==1.70.0",
  "anndata==0.11.4",
  "huggingface==0.0.1",
  "huggingface-hub==0.30.2",
  "pre-commit>=4.2.0",
  "black>=25.1.0",
  "ruff>=0.11.7",
  "torch-geometric>=2.6.1",
  "pyg-lib>=0.4.0",
  "torch-scatter>=2.1.2",
  "torch-sparse>=0.6.18",
  "deepspeed==0.16.7",
  "nvidia-cublas-cu12==12.4.5.8",
  "nvidia-cuda-cupti-cu12==12.4.127",
  "nvidia-cuda-nvrtc-cu12==12.4.127",
  "nvidia-cuda-runtime-cu12==12.4.127",
  "nvidia-cudnn-cu12==9.1.0.70",
  "nvidia-cufft-cu12==11.2.1.3",
  "nvidia-curand-cu12==10.3.5.147",
  "nvidia-cusolver-cu12==11.6.1.9",
  "nvidia-cusparse-cu12==12.3.1.170",
  "nvidia-cusparselt-cu12==0.6.2",
  "nvidia-ml-py==12.570.86",
  "nvidia-nccl-cu12==2.21.5",
  "nvidia-nvjitlink-cu12==12.4.127",
  "nvidia-nvtx-cu12==12.4.127",
  "triton==3.2.0; sys_platform == 'linux'",
  "pyg-lib==0.4.0",
  "torch-scatter==2.1.2",
  "torch-sparse==0.6.18",
  "torch-geometric==2.6.1",
  "torch-spline-conv==1.2.2",
  "black>=25.1.0",
  "ruff>=0.11.7",
  "types-pyyaml>=6.0.12.20250402",
  "pip>=25.1.1",
  "scvi-tools>=1.3.0",
]



# --- Start tool.uv configuration ---

# Main [tool.uv] table first
[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.6.0+cu124.html",
    "https://data.pyg.org/whl/torch-2.6.0+cpu.html",
]

# Index definitions
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools]
py-modules = ["gspp"]

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
]
build-backend = "setuptools.build_meta"
